dataset1235/2025-2/1955397009/users/1721067133/executions/1107611404_2383239197.log
== RUN (2025-08-21 13:52:06)
-- CODE: 
from math import *

a = float(input("Informe o valor da distância a entre o observador e aprimeira arvore: "))
b = float(input("Informe o valor da distância b entre o observador e a segunda arvore: "))
y = float(input("Informe o angulo y entre a e b em graus: "))
y = radians (y)

c = sqrt( ((a**2) + (b**2)) - ((2*a*b)*(cos(y))) )

print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:46:11)
-- CODE: 
from math import *

a = float(input("Informe o valor da distância a entre o observador e aprimeira arvore: "))
b = float(input("Informe o valor da distância b entre o observador e a segunda arvore: "))
y = float(input("Informe o angulo y entre a e b em graus: "))

c = sqrt((a**2) +  (b**2) - ((2 * a * b) * cos(y)))

print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:48:18)
-- CODE: 
from math import *

a = float(input("Informe o valor da distância a entre o observador e aprimeira arvore: "))
b = float(input("Informe o valor da distância b entre o observador e a segunda arvore: "))
y = float(input("Informe o angulo y entre a e b em graus: "))

c = ((a**2) +  (b**2) - ((2 * a * b) * cos(y)))
c = math.sqrt(c)

print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(c)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(c)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(c)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(c)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(c)
        ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = math.sqrt(c)
        ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:56:20)
-- CODE: 
from math import *

a = float(input("Informe o valor da distância a entre o observador e aprimeira arvore: "))
b = float(input("Informe o valor da distância b entre o observador e a segunda arvore: "))
y = float(input("Informe o angulo y entre a e b em graus: "))
y = radians (y)

c = sqrt( ((a**2) + (b**2)) - ((2*a*b)*(cos(y))) )

print(round(c,2))

# SEMPRE QUE PEDIR ANGULO EM GRAUS CONVERTER COM A FUNÇAO RADIANS
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:56:08)
-- CODE: 
from math import *

a = float(input("Informe o valor da distância a entre o observador e aprimeira arvore: "))
b = float(input("Informe o valor da distância b entre o observador e a segunda arvore: "))
y = float(input("Informe o angulo y entre a e b em graus: "))
y = radians (y)

c = sqrt( ((a**2) + (b**2)) - ((2*a*b)*(cos(y))) )

print(round(c,2))

# SEMPRE QUE PEDIR ANGULO EM GRAUS CONVERTER COM A FUNÇAO RADIANS
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:47:26)
-- CODE: 
from math import *

a = float(input("Informe o valor da distância a entre o observador e aprimeira arvore: "))
b = float(input("Informe o valor da distância b entre o observador e a segunda arvore: "))
y = float(input("Informe o angulo y entre a e b em graus: "))

c = ((a**2) +  (b**2) - ((2 * a * b) * cos(y)))
c = sqrt(c)

print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Informe o valor da distância a entre o observador e aprimeira arvore: Informe o valor da distância b entre o observador e a segunda arvore: Informe o angulo y entre a e b em graus: 17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
